; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_net_crypto.c_handle_cookie_request.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_net_crypto.c_handle_cookie_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@COOKIE_REQUEST_LENGTH = common dso_local global i64 0, align 8
@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@crypto_box_NONCEBYTES = common dso_local global i32 0, align 4
@COOKIE_REQUEST_PLAIN_LENGTH = common dso_local global i32 0, align 4
@crypto_box_MACBYTES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32*, i32*, i32*, i64)* @handle_cookie_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_cookie_request(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3, i32* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i64 %5, i64* %13, align 8
  %15 = load i64, i64* %13, align 8
  %16 = load i64, i64* @COOKIE_REQUEST_LENGTH, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %6
  store i32 -1, i32* %7, align 4
  br label %56

19:                                               ; preds = %6
  %20 = load i32*, i32** %11, align 8
  %21 = load i32*, i32** %12, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %24 = call i32 @memcpy(i32* %20, i32* %22, i32 %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %10, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = call i32 @DHT_get_shared_key_sent(i32 %27, i32* %28, i32* %29)
  %31 = load i32*, i32** %10, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 1
  %34 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  %37 = load i32*, i32** %12, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 1
  %39 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32, i32* @crypto_box_NONCEBYTES, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = load i32, i32* @COOKIE_REQUEST_PLAIN_LENGTH, align 4
  %46 = sext i32 %45 to i64
  %47 = load i64, i64* @crypto_box_MACBYTES, align 8
  %48 = add nsw i64 %46, %47
  %49 = load i32*, i32** %9, align 8
  %50 = call i32 @decrypt_data_symmetric(i32* %31, i32* %36, i32* %44, i64 %48, i32* %49)
  store i32 %50, i32* %14, align 4
  %51 = load i32, i32* %14, align 4
  %52 = load i32, i32* @COOKIE_REQUEST_PLAIN_LENGTH, align 4
  %53 = icmp ne i32 %51, %52
  br i1 %53, label %54, label %55

54:                                               ; preds = %19
  store i32 -1, i32* %7, align 4
  br label %56

55:                                               ; preds = %19
  store i32 0, i32* %7, align 4
  br label %56

56:                                               ; preds = %55, %54, %18
  %57 = load i32, i32* %7, align 4
  ret i32 %57
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @DHT_get_shared_key_sent(i32, i32*, i32*) #1

declare dso_local i32 @decrypt_data_symmetric(i32*, i32*, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
